[package]
authors = ["PureStake"]
edition = "2021"
name = "pallet-crowdloan-rewards"
version = '0.6.0'
description = "Reward citizens who participated in a crowdloan to acquire a parachain slot o nthe backing relay chain."

[dependencies]
parity-scale-codec = { version = "3.0.0", default-features = false}
serde = { version = "1.0.101", optional = true, features = ["derive"], default-features = false }
log = { version = "0.4", default-features = false }

scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/mangata-finance/substrate", branch = "fix/rpc-vesting", default-features = false }
frame-system = { git = "https://github.com/mangata-finance/substrate", branch = "fix/rpc-vesting", default-features = false }
sp-core = { git = "https://github.com/mangata-finance/substrate", branch = "fix/rpc-vesting", default-features = false }
sp-runtime = { git = "https://github.com/mangata-finance/substrate", branch = "fix/rpc-vesting", default-features = false }
sp-std = { git = "https://github.com/mangata-finance/substrate", branch = "fix/rpc-vesting", default-features = false }
sp-io = { git = "https://github.com/mangata-finance/substrate", branch = "fix/rpc-vesting", default-features = false }
pallet-utility = { git = "https://github.com/mangata-finance/substrate", branch = "fix/rpc-vesting", default-features = false }
frame-benchmarking = { git = "https://github.com/mangata-finance/substrate", branch = "fix/rpc-vesting", default-features = false, optional = true }
ed25519-dalek = { version = "1.0.1", default-features = false, features = ["u64_backend", "alloc"], optional = true }
sp-trie = { git = "https://github.com/mangata-finance/substrate", branch = "fix/rpc-vesting", default-features = false, optional = true }
mangata-types = { git = "https://github.com/mangata-finance/substrate", branch = "fix/rpc-vesting", default-features = false }
pallet-vesting-mangata = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting", default-features = false }
orml-tokens = { default-features = false, git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "mangata-dev" }

[dev-dependencies]
orml-traits = { default-features = false, version = "0.4.1-dev", git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "mangata-dev" }
pallet-vesting-mangata = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting"}

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "pallet-utility/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-runtime/std",
    "serde",
    "log/std",
    "sp-std/std",
    "sp-io/std",
    "scale-info/std",
    "mangata-types/std",
    "orml-tokens/std",
]
runtime-benchmarks = [
    "sp-runtime/runtime-benchmarks",
    "frame-benchmarking",
    "sp-trie",
    "ed25519-dalek",
]

try-runtime = ["frame-system/try-runtime", "frame-support/try-runtime"]



# patch generated by ./scripts/dev_manifest.sh
[patch."https://github.com/paritytech/cumulus"]
cumulus-test-relay-sproof-builder = { git = "https://github.com/mangata-finance//cumulus", branch = "mangata-dev" }
cumulus-client-pov-recovery = { git = "https://github.com/mangata-finance//cumulus", branch = "mangata-dev" }
cumulus-client-network = { git = "https://github.com/mangata-finance//cumulus", branch = "mangata-dev" }
cumulus-client-service = { git = "https://github.com/mangata-finance//cumulus", branch = "mangata-dev" }
cumulus-client-collator = { git = "https://github.com/mangata-finance//cumulus", branch = "mangata-dev" }
cumulus-client-consensus-common = { git = "https://github.com/mangata-finance//cumulus", branch = "mangata-dev" }
cumulus-client-consensus-aura = { git = "https://github.com/mangata-finance//cumulus", branch = "mangata-dev" }
cumulus-client-cli = { git = "https://github.com/mangata-finance//cumulus", branch = "mangata-dev" }
parachain-info = { git = "https://github.com/mangata-finance//cumulus", branch = "mangata-dev" }
cumulus-pallet-xcm = { git = "https://github.com/mangata-finance//cumulus", branch = "mangata-dev" }
cumulus-pallet-aura-ext = { git = "https://github.com/mangata-finance//cumulus", branch = "mangata-dev" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/mangata-finance//cumulus", branch = "mangata-dev" }
cumulus-pallet-parachain-system-proc-macro = { git = "https://github.com/mangata-finance//cumulus", branch = "mangata-dev" }
cumulus-pallet-parachain-system = { git = "https://github.com/mangata-finance//cumulus", branch = "mangata-dev" }
cumulus-pallet-dmp-queue = { git = "https://github.com/mangata-finance//cumulus", branch = "mangata-dev" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/mangata-finance//cumulus", branch = "mangata-dev" }
cumulus-primitives-core = { git = "https://github.com/mangata-finance//cumulus", branch = "mangata-dev" }
cumulus-primitives-utility = { git = "https://github.com/mangata-finance//cumulus", branch = "mangata-dev" }
cumulus-primitives-timestamp = { git = "https://github.com/mangata-finance//cumulus", branch = "mangata-dev" }
cumulus-relay-chain-interface = { git = "https://github.com/mangata-finance//cumulus", branch = "mangata-dev" }
#cumulus-relay-chain-local = { git = "https://github.com/mangata-finance//cumulus", branch = "mangata-dev" }

# # patch generated by ./scripts/dev_manifest.sh
[patch."https://github.com/mangata-finance/open-runtime-module-library"]
orml-xcm = { git = "https://github.com/mangata-finance//open-runtime-module-library", branch = "mangata-dev" }
orml-xcm-support = { git = "https://github.com/mangata-finance//open-runtime-module-library", branch = "mangata-dev" }
orml-utilities = { git = "https://github.com/mangata-finance//open-runtime-module-library", branch = "mangata-dev" }
orml-unknown-tokens = { git = "https://github.com/mangata-finance//open-runtime-module-library", branch = "mangata-dev" }
orml-xtokens = { git = "https://github.com/mangata-finance//open-runtime-module-library", branch = "mangata-dev" }
orml-traits = { git = "https://github.com/mangata-finance//open-runtime-module-library", branch = "mangata-dev" }
orml-tokens = { git = "https://github.com/mangata-finance//open-runtime-module-library", branch = "mangata-dev" }

# patch generated by ./scripts/dev_manifest.sh
[patch."https://github.com/mangata-finance/polkadot"]
xcm-executor = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
pallet-xcm = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
xcm-builder = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
xcm = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
xcm-procedural = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-parachain = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-statement-table = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-rpc = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-primitives = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-core-primitives = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-cli = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-node-subsystem-util = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-node-jaeger = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-test-service = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-node-subsystem-types = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-client = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-availability-bitfield-distribution = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-availability-recovery = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-gossip-support = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-approval-distribution = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-collator-protocol = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-dispute-distribution = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-node-network-protocol = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-network-bridge = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-statement-distribution = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-availability-distribution = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-node-core-approval-voting = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-node-core-pvf = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-node-core-backing = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-node-core-dispute-coordinator = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-node-core-runtime-api = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-node-core-bitfield-signing = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-node-core-provisioner = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-node-core-parachains-inherent = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-node-core-chain-api = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-node-core-chain-selection = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-node-core-candidate-validation = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-node-core-av-store = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-node-subsystem = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-service = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-node-metrics = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
#metered-channel = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
#polkadot-overseer-gen-proc-macro = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
#polkadot-overseer-gen = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-overseer = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-node-collation-generation = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-node-primitives = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-runtime = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-test-runtime = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
slot-range-helper = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-runtime-common = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-runtime-parachains = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }
polkadot-erasure-coding = { git = "https://github.com/mangata-finance//polkadot", branch = "mangata-dev" }

# patch generated by ./scripts/dev-v0.9.28_manifest.sh
[patch."https://github.com/mangata-finance/substrate"]
pallet-authorship = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-weights = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-bags-list = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-transaction-payment-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-transaction-payment = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
frame-try-runtime = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
frame-system-rpc-runtime-api = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
frame-system = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-beefy = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-membership = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
frame-benchmarking = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-identity = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-session = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-aura = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-bounties = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-balances = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-authority-discovery = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-tips = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-election-provider-multi-phase = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-beefy-mmr = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-scheduler = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-multisig = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
frame-executive = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-im-online = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-treasury = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-utility = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-sudo = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-offences = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-democracy = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-grandpa = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
frame-election-provider-support = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-collective = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-mmr = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
#pallet-mmr-primitives = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
frame-support = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
frame-support-procedural-tools-derive = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
frame-support-procedural-tools = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
frame-support-procedural = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-nicks = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-staking = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-staking-reward-curve = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-society = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-indices = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-babe = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-timestamp = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-elections-phragmen = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-proxy = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-vesting = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-vesting-mangata = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-informant = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-executor-wasmtime = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-executor-common = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-executor-wasmi = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-executor = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-network-gossip = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-transaction-pool-api = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-transaction-pool = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-tracing-proc-macro = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-tracing = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-client-db = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-sync-state-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-network = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-network-common = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-authority-discovery = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-utils = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-block-builder-ver = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-keystore = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-rpc-server = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-client-api = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-service = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-basic-authorship-ver = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-block-builder = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-rpc-api = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-chain-spec-derive = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-chain-spec = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-proposer-metrics = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-peerset = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-basic-authorship = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-offchain = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-state-db = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-allocator = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-consensus = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-consensus-aura = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-consensus-epochs = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-consensus-slots = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-consensus-babe-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-consensus-babe = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-cli = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-telemetry = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
fork-tree = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
substrate-wasm-builder = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
try-runtime-cli = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
frame-benchmarking-cli = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
substrate-frame-rpc-system = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
substrate-build-script-utils = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
substrate-prometheus-endpoint = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
substrate-test-client = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-panic-handler = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-inherents = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-authorship = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-storage = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-std = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-version-proc-macro = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-version = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-transaction-pool = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-ver = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-tracing = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-database = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-debug-derive = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-session = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
extrinsic-shuffler = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
ver-api = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-core-hashing-proc-macro = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-core-hashing = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-core = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-keyring = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-authority-discovery = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-runtime-interface-proc-macro = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-runtime-interface = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-arithmetic = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-keystore = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-api-proc-macro = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-api = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-maybe-compressed-blob = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-transaction-storage-proof = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-state-machine = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-block-builder = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-wasm-interface = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-npos-elections = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
#sp-npos-elections-solution-type = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-application-crypto = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-serializer = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-offchain = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-staking = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-trie = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-blockchain = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-externalities = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-consensus = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-consensus-aura = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-consensus-slots = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-consensus-vrf = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-consensus-babe = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-timestamp = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-runtime = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-io = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }

[patch."https://github.com/paritytech/substrate"]
pallet-authorship = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-weights = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-bags-list = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-transaction-payment-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-transaction-payment = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
frame-try-runtime = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
frame-system-rpc-runtime-api = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
frame-system = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-beefy = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-membership = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
frame-benchmarking = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-identity = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-session = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-aura = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-bounties = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-balances = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-authority-discovery = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-tips = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-election-provider-multi-phase = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-beefy-mmr = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-scheduler = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-multisig = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
frame-executive = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-im-online = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-treasury = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-utility = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-sudo = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-offences = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-democracy = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-grandpa = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
frame-election-provider-support = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-collective = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-mmr = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
#pallet-mmr-primitives = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
frame-support = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
frame-support-procedural-tools-derive = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
frame-support-procedural-tools = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
frame-support-procedural = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-nicks = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-staking = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-staking-reward-curve = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-society = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-indices = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-babe = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-timestamp = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-elections-phragmen = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-proxy = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-vesting = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
pallet-vesting-mangata = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-informant = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-executor-wasmtime = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-executor-common = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-executor-wasmi = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-executor = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-network-gossip = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-transaction-pool-api = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-transaction-pool = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-tracing-proc-macro = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-tracing = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-client-db = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-sync-state-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-network = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-network-common = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-authority-discovery = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-utils = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-block-builder-ver = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-keystore = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-rpc-server = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-client-api = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-service = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-basic-authorship-ver = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-block-builder = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-rpc-api = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-chain-spec-derive = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-chain-spec = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-proposer-metrics = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-peerset = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-basic-authorship = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-offchain = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-state-db = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-allocator = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-consensus = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-consensus-aura = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-consensus-epochs = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-consensus-slots = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-consensus-babe-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-consensus-babe = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-cli = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sc-telemetry = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
fork-tree = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
substrate-wasm-builder = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
try-runtime-cli = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
frame-benchmarking-cli = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
substrate-frame-rpc-system = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
substrate-build-script-utils = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
substrate-prometheus-endpoint = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
substrate-test-client = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-panic-handler = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-inherents = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-authorship = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-storage = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-std = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-version-proc-macro = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-version = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-transaction-pool = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-ver = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-tracing = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-database = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-debug-derive = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-session = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
extrinsic-shuffler = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
ver-api = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-core-hashing-proc-macro = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-core-hashing = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-core = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-keyring = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-authority-discovery = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-runtime-interface-proc-macro = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-runtime-interface = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-arithmetic = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-keystore = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-api-proc-macro = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-api = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-maybe-compressed-blob = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-transaction-storage-proof = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-state-machine = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-block-builder = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-wasm-interface = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-npos-elections = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
#sp-npos-elections-solution-type = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-application-crypto = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-serializer = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-offchain = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-staking = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-trie = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-blockchain = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-externalities = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-consensus = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-consensus-aura = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-consensus-slots = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-consensus-vrf = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-consensus-babe = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-timestamp = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-runtime = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
sp-io = { git = "https://github.com/mangata-finance//substrate", branch = "fix/rpc-vesting" }
